--- a/html-css/estrutura-basica/index.html
+++ b/html-css/estrutura-basica/index.html
@@ -3,11 +3,17 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Cursos de HTML</title>
+  <title>Carros e Bicicletas</title>
+  <link rel="stylesheet" href="style.css">
 
 <body>
-  <h1>Cursos de HTML</h1>
+  <h1 id="intro">Carros e Bicicletas</h1>
 
+  <p>Veja mais <a href=""> produtos</a></p>
+
+  <a  class="codigo" href="produtos/bicicletas.html">Biclcletas</a>
+  <a class="codigo grande"  href="produtos/carros.html">Carros</a>
+  <h2 class="azul grande underline">Curso de Código</h2>
 </body>
 </head>
 
