--- a/html-css/exercicios/bikcraft/index.html
+++ b/html-css/exercicios/bikcraft/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,22 +8,24 @@
   <title>Bikcraft</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <div class="flex">
     <img src="img/bikcraft.svg" alt="Logo Bikcraft">
     <div class="flex-items">
-        <a href="#">Sobre</a>
-        <a href="#">Produtos</a>
-        <a href="#">Lojas</a>
-        <a href="#">Contato</a>
+      <a href="#">Sobre</a>
+      <a href="#">Produtos</a>
+      <a href="#">Lojas</a>
+      <a href="#">Contato</a>
     </div>
   </div>
   <main>
     <div class="container">
       <div class="grid">
-        <span></span>
+        <span class="detalhe"></span>
         <h1>Bicicletas Feitas a Mão</h1>
-        <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
+        <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios
+          da marca.</p>
         <a href="#" class="vermais">Ver Mais</a>
       </div>
       <img src="img/bicicleta.jpg" alt="Bicleta Bikcraft Preta">
@@ -30,17 +33,17 @@
       <div class="vantagens">
         <div class="vantagens-item">
           <img src="img/eletrica.svg" alt="">
-          <h2>Motor Elétrico</h2>
+          <h3>Motor Elétrico</h3>
           <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
         </div>
         <div class="vantagens-item">
           <img src="img/velocidade.svg" alt="">
-          <h2>40 km/h</h2>
+          <h3>40 km/h</h3>
           <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
         </div>
         <div class="vantagens-item">
           <img src="img/rastreador.svg" alt="">
-          <h2>Rastreador</h2>
+          <h3>Rastreador</h3>
           <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
         </div>
       </div>
@@ -50,4 +53,5 @@
     </footer>
   </main>
 </body>
+
 </html>
